syntax = "proto3";

package ibc.applications.fetchprice.v1;

option go_package = "github.com/initia-labs/initia/x/ibc/fetchprice/types";

import "gogoproto/gogo.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ibc/applications/fetchprice/v1/types.proto";
import "google/api/annotations.proto";

// Query provides defines the gRPC querier service.
service Query {

  // Params queries all parameters of the ibc-transfer module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ibc/apps/fetchprice/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}